modified login and register

--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand Food Ordering</title>
-    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    
+    <link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/index.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/about.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/contact.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/menu.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/blog.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/add-meal.css' %}">
     
 </head>
 <body class="loading" style="background-image: url('{% static 'images/hero-bg.png' %}');">
