--- a/products/templates/register.html
+++ b/products/templates/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="{% static 'styles/register.css' %}"> <!-- Link to your CSS file -->
 </head>
 <body class="loading-screen" style="background-image: url('{% static 'images/background1.png' %}'); background-size: cover; height: 100vh; background-position: center; background-repeat: no-repeat;">
     <!-- Loading Screen -->
@@ -13,9 +13,10 @@
         <img src="{% static 'images/loading.gif' %}" alt="Loading...">
     </div>
 
-    <!-- Your main content -->
+    <!-- Main Content -->
     <div id="main-content" style="display: none;">
         <div class="auth-container">
+            
             <!-- Display alert messages -->
             {% if messages %}
                 <div class="alert-container">
@@ -28,8 +29,10 @@
             {% endif %}
             
             <h1 class="auth-title">Don't have an account? Register here</h1>
+            
             <form action="{% url 'p_register' %}" method="POST">
                 {% csrf_token %}
+                
                 <div class="input-group">
                     <div class="column">
                         <label for="f_name">First Name</label>
@@ -40,21 +43,26 @@
                         <input type="text" id="l_name" name="l_name" required>
                     </div>
                 </div>
+                
                 <div class="input-group">
                     <label for="username">Username</label>
                     <input type="text" id="username" name="username" required>
                 </div>
+                
                 <div class="input-group">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
                 </div>
+                
                 <div class="input-group">
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
+                
                 <button type="submit" class="auth-button">Register</button>
             </form>
-            <p class="auth-link">Already have an account? <a href="{% url 'p_login' %}" style="color: #32cd32;">Login here</a></p>
+            
+            <p class="auth-link">Already have an account? <a href="{% url 'p_login' %}" class="auth-link">Login here</a></p>
         </div>
     </div>
     
