--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -77,8 +77,8 @@
         </div>
         <div class="footer-contact">
             <h3>Contact Us</h3>
-            <a href="mailto:abdulhaseebk2005@gmail.com" style="color:green"><p style="color:black" >Email: abdulhaseebk2005@gmail.com</p></a>
-            <a href="tel:+923120496409"  style="color:green"><p style="color:black">Phone: +92 312 049 6409</p></a>
+            <a href="mailto:abdulhaseebk2005@gmail.com" style="color:green"><p style="color:white" >Email: abdulhaseebk2005@gmail.com</p></a>
+            <a href="tel:+923120496409"  style="color:green"><p style="color:white">Phone: +92 312 049 6409</p></a>
             <div class="social-links">
                 <a href="https://www.facebook.com/profile.php?id=100068386969987" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="Facebook"></a>
                 <a href="https://x.com/haseebk2005"target="_blank"><img src="{% static 'images/twitter.png' %}" alt="Twitter"></a>
