--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,5 +1,7 @@
 
-
+a{
+    color: #c6cbcf;
+}
 /* Styles for mobile screens */
 @media only screen and (max-width: 768px) {
 
@@ -36,6 +38,10 @@ body.loading {
 
 .navbar-menu li {
     margin-left: 20px;
+    
+}
+.navbar-menu li img{
+    width: 40px;
 }
 
 .navbar-menu a {
@@ -111,6 +117,7 @@ body.loading {
         font-size: 18px;
         padding: 10px;
         display: block;
+        
     }
 
     .hamburger-menu {
@@ -139,6 +146,8 @@ body.loading {
         text-align: center;
         
     }
+
+
 }
 
 /* Styles for desktop screens */
@@ -176,7 +185,9 @@ body.loading {
 .navbar-menu li {
     margin-left: 20px;
 }
-
+.navbar-menu li img{
+    width: 40px;
+}
 .navbar-menu a {
     text-decoration: none;
     color: white;
