modified till blog

--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -7,6 +7,9 @@
     <title>Grand Food Ordering</title>
     
     <link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/health-tips.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/guide.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/top-5.css' %}">
     <link rel="stylesheet" href="{% static 'styles/index.css' %}">
     <link rel="stylesheet" href="{% static 'styles/about.css' %}">
     <link rel="stylesheet" href="{% static 'styles/contact.css' %}">
